# portfolio-tracker

./: README.md
backend/: .env.example  portfolio.db  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  market_data.py  portfolio.py  transactions.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  portfolio.py  transaction.py  user.py
backend/app/schemas/: __init__.py  portfolio.py  transaction.py  user.py
backend/app/services/: market_data.py  portfolio_calculator.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthProvider.tsx  ProtectedRoute.tsx
frontend/src/components/Layout/: Header.tsx  Layout.tsx  LayoutSimple.tsx  Sidebar.tsx
frontend/src/components/Portfolio/: CreatePortfolioModal.tsx  DeleteConfirmationModal.tsx  EditPortfolioModal.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  Input.tsx
frontend/src/hooks/: useAuth.ts  useMarketData.ts  usePortfolio.ts
frontend/src/pages/: Dashboard.tsx  DashboardSimple.tsx  Login.tsx  PortfolioDetail.tsx  Portfolios.tsx  Register.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts  marketStore.ts  portfolioStore.ts
frontend/src/types/: index.ts
frontend/tests/e2e/: dashboard.spec.ts  homepage.spec.ts  portfolio-features.spec.ts  portfolio-integration.spec.ts
